# PythonAutoNifty

./: .gitignore  CODE_OF_CONDUCT.md  Drawing.py  FractalDefn.py  FractalDefn2D.py  FractalPiece.py  FractalPiece2D.py  FractalPlotter.py  FractalPlotter2D.py  FractalSystem.py  FractalSystem2D.py  LICENSE  Matrix2D.py  Pos.py  README.md  Renderer.py  Vector2D.py  autonifty.py  constants.py  drawing.py  drawingMethods.py  drawing_methods.py  font.py  fontConstants.py  font_constants.py  fractalConstants.py  fractalGeneratorFns.py  fractalHelperFns.py  fractalHullHelperFns.py  fractalRunner.py  fractal_defn.py  fractal_generator_fns.py  fractal_helper_fns.py  fractal_hull_helper_fns.py  fractal_piece.py  fractal_plotter.py  fractal_runner.py  fractal_system.py  helperFns.py  helper_fns.py  (+9 more)
examples/: alpha_example.py  curved_lines.py  fibonacci_dots.py  fibonacci_image.py  point_image.py  rectangle_example.py  rotating_square.py  shrinking_circle_ring.py  smiley_face.py  square_example.py  square_fractal.py  square_image.py  squared_circle.py  star_example.py  text_drawing_example.py  tiled_diagonals.py
pyautonifty/: __init__.py  drawing.py  drawing_methods.py  font.py  fractal_constants.py  fractal_defn.py  fractal_generator_fns.py  fractal_helper_fns.py  fractal_hull_helper_fns.py  fractal_piece.py  fractal_plotter.py  fractal_runner.py  fractal_system.py  helper_fns.py  pos.py  renderer.py
