[metadata]
name = pyautonifty
version = 0.0.1
author = Markichu, Davidryan59, EL-S
author_email = EL.S13337@gmail.com
description = Automatically and programmatically generate drawing instructions for Nifty.Ink
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Markichu/PythonAutoNifty
project_urls =
    Bug Tracker = https://github.com/Markichu/PythonAutoNifty/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .